LA/tests/test14.a.out
{s:27, 2, 3, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
ERROR: instruction at line 13 attempted to use position 3 in the dimension 1 of a tensor that only has 3 elements in that dimension
