LA/tests/test14.a
void main ( ){

  int64[][][] a
  a <- new Array(2,3,4)
   print(a)
   initArray(a)
  return 

}

void initArray (int64[][][] A){

  A[1][3][0] <- 0
  return

}
